# smorth

./: Cargo.toml  flake.nix
nix/: common.nix  devShell.nix
src/: lib.rs  main.rs
