[package]
name = "smorth"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
core2 = { git = "https://github.com/bbqsrc/core2.git", default-features = false, features = ["alloc"] }
tinyvec = { version = "1.1.1", features = ["alloc"] }
smartstring = { version = "0.2.6" }
hashbrown = { version = "0.11.0", default-features = false, features = ["ahash", "inline-more"] }
rustyline = { version = "8.0.0", default-features = false, optional = true }

[[bin]]
name = "smorth"
required-features = ["rustyline"]
